--- a/ProyectoMigracion/nbproject/private/private.properties
+++ b/ProyectoMigracion/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\leelu\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\Gerson\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
